--- a/app/templates/adminPart/adminUploadLecturerTimetable.html
+++ b/app/templates/adminPart/adminUploadLecturerTimetable.html
@@ -9,10 +9,10 @@
     <form id="uploadLecturerForm" action="{{ url_for('admin_uploadLecturerTimetable') }}" method="POST" enctype="multipart/form-data">
         <label for="lecturer_list">
             <div class="upload-container">
-                <div class="upload-text">Upload file format<br><br>Click to upload or drag and drop</div>
-                <div class="file-types">XLSX, XLS, or XLSM</div>
+                <div><h3>Upload file format with according format<br><br>Click to upload or drag and drop with below file format</h3></div>
+                <div><h4>XLSX, XLS, or XLSM</h4></div><br><br>
                 <!-- Selected file display -->
-                <div id="selectedFileName" style="text-align: center; margin: 10px 0; font-size: 0.9em; color: #555;"></div>
+                <div id="selectedFileName"><h3></h3></div>
             </div>
         </label>
         
