--- a/app/static/css/admin/adminHome.css
+++ b/app/static/css/admin/adminHome.css
@@ -159,6 +159,7 @@ html, body {
 
 .upload-container {
     border: 2px dashed #ccc;
+    background-color: #f5f5f5;
     border-radius: 8px;
     padding: 30px;
     text-align: center;
@@ -170,7 +171,7 @@ html, body {
 
 .upload-container:hover {
     border-color: #888;
-    background-color: #f5f5f5;
+    background-color: #fff;
 }
 
 .upload-text {
