--- a/app/templates/adminPart/adminUploadCourseDetails.html
+++ b/app/templates/adminPart/adminUploadCourseDetails.html
@@ -1,27 +1,31 @@
 {% extends "adminPart/adminBase.html" %}
 {% block title %}Admin UploadCourse{% endblock %}
-
 {% block content %}
 <div class="menu-section">
     <h2>Upload Course Details</h2>
-    <div class="form-frame">
-        <form id="uploadExamForm" action="{{ url_for('admin_uploadExamDetails') }}" method="POST" enctype="multipart/form-data">
-            <div style="text-align: center; margin-bottom: 2%;">
-                <label>
-                    Upload file format
-                </label>
+    <form id="uploadCourseForm" action="{{ url_for('admin_uploadCourseDetails') }}" method="POST" enctype="multipart/form-data">
+        <label for="course_list">
+            <div class="upload-container">
+                <div class="upload-text">Upload file format with according format
+                    <br><br>Click to upload or drag and drop with below file format</div>
+                <div class="file-types">XLSX, XLS, or XLSM</div><br><br>
+                <!-- Selected file display -->
+                <div id="selectedFileName" class="file-name-display"></div>
             </div>
-            <div class="input-frame">
-                <input type="file" id="exam_list" name="exam_file" accept=".xlsx,.xls,.xlsm" required>
-            </div>
-            <div class="button-wrapper">
-                <button type="submit">Upload</button>
-            </div>
-            <!-- Result feedback -->
-            <div id="examUploadResult" style="text-align: center;"></div>
-            <div id="examUploadErrors" style="text-align: center; max-height: 15vh; overflow-y: auto;"></div>
-        </form>
-    </div>
+        </label>
+        <input type="file" id="course_list" name="course_file" accept=".xlsx,.xls,.xlsm" required style="display: none;">
+        
+        <!-- Result feedback -->
+        <div id="courseUploadResult" class="result-message"></div>
+        <div id="courseUploadErrors" class="error-message"></div>
+        
+        <!-- Submit button -->
+        <div class="button-wrapper">
+            <button type="submit">Upload</button>
+        </div>
+    </form>
+
+
 
     <br><br>
     <h2>Table Record</h2>
