--- a/app/templates/adminPart/adminUploadExamDetails.html
+++ b/app/templates/adminPart/adminUploadExamDetails.html
@@ -8,7 +8,7 @@
             <div class="upload-container">
                 <div class="upload-text">Upload file format with 1st row must be empty and format with Date, Day, Start Time, End Time, Program, Course/Section, Lecturer, No of, Room
                     <br><br>Click to upload or drag and drop with below file format</div>
-                <div class="file-types">XLSX, XLS, or XLSM</div><br><br>
+                <div class="file-types">XLSX, XLS, or XLSM</div><br>
                 <!-- Selected file display -->
                 <div id="selectedFileName" class="file-name-display"></div>
             </div>
