--- a/app/templates/adminPart/adminUploadCourseDetails.html
+++ b/app/templates/adminPart/adminUploadCourseDetails.html
@@ -8,7 +8,7 @@
             <div class="upload-container">
                 <div class="upload-text">Upload file format with according format
                     <br><br>Click to upload or drag and drop with below file format</div>
-                <div class="file-types">XLSX, XLS, or XLSM</div><br><br>
+                <div class="file-types">XLSX, XLS, or XLSM</div><br>
                 <!-- Selected file display -->
                 <div id="selectedFileName" class="file-name-display"></div>
             </div>
@@ -46,15 +46,9 @@
             <thead>
                 <tr>
                     <th>No</th>
-                    <th>Exam Date</th>
-                    <th>Exam Day</th>
-                    <th>Start Time</th>
-                    <th>End Time</th>
-                    <th>Program Code</th>
-                    <th>Course/Section</th>
-                    <th>Lecturer</th>
-                    <th>No. of Students</th>
-                    <th>Room</th>
+                    <th>Course Code</th>
+                    <th>Course Name</th>
+                    <th>Credit Hour(s)</th>
                 </tr>
             </thead>
             <tbody>
@@ -62,15 +56,9 @@
                 <tr>
                     <td>{{ loop.index }}</td> <!-- Display index starting from 1 -->
                     <!-- <td>{{ row.examID  }}</td> -->
-                    <td>{{ row.examDate }}</td>
-                    <td>{{ row.examDay }}</td>
-                    <td>{{ row.examStartTime }}</td>
-                    <td>{{ row.examEndTime }}</td>
-                    <td>{{ row.examProgramCode }}</td>
-                    <td>{{ row.examCourseSectionCode }}</td>
-                    <td>{{ row.examLecturer }}</td>
-                    <td>{{ row.examTotalStudent }}</td>
-                    <td>{{ row.examVenue }}</td>
+                    <td>{{ row.courseCode }}</td>
+                    <td>{{ row.courseName }}</td>
+                    <td>{{ row.courseCreditHour }}</td>
                 </tr>
                 {% endfor %}
             </tbody>
