--- a/app/templates/adminPart/adminUploadLecturerList.html
+++ b/app/templates/adminPart/adminUploadLecturerList.html
@@ -9,7 +9,7 @@
             <div class="upload-container">
                 <div class="upload-text">Upload file format with 1st row must be empty and format with Id, Name, Department, Role, Email, Contact
                     <br><br>Click to upload or drag and drop with below file format</div>
-                <div class="file-types">XLSX, XLS, or XLSM</div><br><br>
+                <div class="file-types">XLSX, XLS, or XLSM</div><br>
                 <!-- Selected file display -->
                 <div id="selectedFileName" class="file-name-display"></div>
             </div>
