--- a/app/templates/adminPart/adminUploadLecturerTimetable.html
+++ b/app/templates/adminPart/adminUploadLecturerTimetable.html
@@ -63,8 +63,8 @@
                         # ... other time slots
                     },
                 -->
-                {% for day, schedule in user_data.items() %}
-                <!--<tr>
+                <!--{% for day, schedule in user_data.items() %}
+                <tr>
                     <td>{{ day }}</td>
                     <td>{{ schedule.get('08:00-09:00', '') }}</td>
                     <td>{{ schedule.get('09:00-10:00', '') }}</td>
@@ -76,8 +76,8 @@
                     <td>{{ schedule.get('15:00-16:00', '') }}</td>
                     <td>{{ schedule.get('16:00-17:00', '') }}</td>
                     <td>{{ schedule.get('17:00-18:00', '') }}</td>
-                </tr>-->
-                {% endfor %}
+                </tr>
+                {% endfor %}-->
             </tbody>
         </table>
     </div>
