--- a/app/templates/adminPart/adminUploadLecturerTimetable.html
+++ b/app/templates/adminPart/adminUploadLecturerTimetable.html
@@ -56,6 +56,15 @@
                 </tr>
             </thead>
             <tbody>
+                {% for row in user_data %}
+                <tr>
+                    <td>Monday</td>
+                    <td>Tuesday</td>
+                    <td>Wednesday</td>
+                    <td>Thursday</td>
+                    <td>Friday</td>
+                </tr>
+                {% endfor %}
                 <!-- user_data = {
                     "Monday": {
                         "08:00-09:00": "Math",
