--- a/app/templates/adminPart/adminProfile.html
+++ b/app/templates/adminPart/adminProfile.html
@@ -8,23 +8,23 @@
     <br>
     <div style="display: flex; flex-direction: row; justify-content: space-between;">
         <div class="form-left">
-            <label class="text-position">Full Name as per IC</label>
+            <label>Full Name as per IC</label>
             <input type="text" name="username" value="{{ admin_name }}" readonly><br>
             
-            <label class="text-position">Staff ID</label>
+            <label>Staff ID</label>
             <input type="text" name="userid" value="{{ admin_id }}" readonly><br>
 
-            <label class="text-position">Email Address</label>
+            <label>Email Address</label>
             <input type="text" name="email" value="{{ admin_email }}" readonly><br>
         </div>
         <br>
 
         <div class="form-right">
-            <label class="text-position">Contact Number</label>
+            <label>Contact Number</label>
             <input type="tel" name="contact" value="{{ lecturerContact_text }}"><br>  
 
             <div class="password-container">
-                <label class="text-position">Password</label>
+                <label>Password</label>
                 <input type="password" name="password1" value="{{ lecturerPassword1_text }}">
                 <button type="button" class="toggle-password-btn">
                     <i class="fas fa-eye"></i>
@@ -32,7 +32,7 @@
             </div><br>
 
             <div class="password-container">
-                <label class="text-position"> Confirm Password</label>
+                <label> Confirm Password</label>
                 <input type="password" name="password2" value="{{ lecturerPassword2_text }}">
                 <button type="button" class="toggle-password-btn">
                     <i class="fas fa-eye"></i>
