--- a/app/templates/adminPart/adminRegister.html
+++ b/app/templates/adminPart/adminRegister.html
@@ -16,22 +16,22 @@
         <br>
         <div style="display: flex; flex-direction: row; justify-content: space-between;">
             <div class="form-left">
-                <label class="text-position">Full Name as per IC</label>
+                <label>Full Name as per IC</label>
                 <input type="text" name="username" value="{{ adminName_text }}"><br>
                 
-                <label class="text-position">Staff ID</label>
+                <label>Staff ID</label>
                 <input type="text" name="userid" value="{{ adminId_text }}"><br>
 
-                <label class="text-position">Email Address</label>
+                <label>Email Address</label>
                 <input type="text" name="email" value="{{ adminEmail_text }}"><br>
             </div>
     
             <div class="form-right">
-                <label class="text-position">Contact Number</label>
+                <label>Contact Number</label>
                 <input type="tel" name="contact" value="{{ adminContact_text }}"><br>  
 
                 <div class="password-container">
-                    <label class="text-position">Password</label>
+                    <label>Password</label>
                     <input type="password" name="password1" value="{{ adminPassword1_text }}">
                     <button type="button" class="toggle-password-btn">
                         <i class="fas fa-eye"></i>
@@ -39,7 +39,7 @@
                 </div><br>
     
                 <div class="password-container">
-                    <label class="text-position"> Confirm Password</label>
+                    <label> Confirm Password</label>
                     <input type="password" name="password2" value="{{ adminPassword2_text }}">
                     <button type="button" class="toggle-password-btn">
                         <i class="fas fa-eye"></i>
