--- a/app/templates/deanPart/deanForgotPassword.html
+++ b/app/templates/deanPart/deanForgotPassword.html
@@ -18,7 +18,7 @@
         <div class="form-container">
             <!-- Frame for Email Address container to send Email -->
             <div class="input-container">
-                <label class="text-position">Email Address</label>
+                <label>Email Address</label>
                 <input type="email" name="email" value="{{ dean_forgot_email_text }}">
             </div>
             <br>
