--- a/app/templates/adminPart/adminResetPassword.html
+++ b/app/templates/adminPart/adminResetPassword.html
@@ -21,7 +21,7 @@
 
         <div class="form-container">
             <div class="password-container">
-                <label class="text-position">Password</label>
+                <label>Password</label>
                 <input type="password" name="password1" value="{{ admin_password_text_1 }}">
                 <button type="button" class="toggle-password-btn">
                     <i class="fas fa-eye"></i>
@@ -29,7 +29,7 @@
             </div><br>
 
             <div class="password-container">
-                <label class="text-position"> Confirm Password</label>
+                <label> Confirm Password</label>
                 <input type="password" name="password2" value="{{ admin_password_text_2 }}">
                 <button type="button" class="toggle-password-btn">
                     <i class="fas fa-eye"></i>
