--- a/app/templates/deanPart/deanRegister.html
+++ b/app/templates/deanPart/deanRegister.html
@@ -16,16 +16,16 @@
         <br>
         <div style="display: flex; flex-direction: row; justify-content: space-between;">
             <div class="form-left">
-                <label class="text-position">Full Name as per IC</label>
+                <label>Full Name as per IC</label>
                 <input type="text" name="username" value="{{ deanName_text }}"><br>
                 
-                <label class="text-position">Staff ID</label>
+                <label>Staff ID</label>
                 <input type="text" name="userid" value="{{ deanId_text }}"><br>
 
-                <label class="text-position">Email Address</label>
+                <label>Email Address</label>
                 <input type="text" name="email" value="{{ deanEmail_text }}"><br>
 
-                <label class="text-position">Head of Department</label>
+                <label>Head of Department</label>
                 <select name="department" value="{{ deanDepartment_text }}">
                     <option value="" disabled selected>Select Department</option>
                     <option value="CADP - CENTRE OF AUSTRALIAN DEGREE PROGRAM">(CADP) CENTRE OF AUSTRALIAN DEGREE PROGRAM</option>
@@ -40,11 +40,11 @@
             </div>
     
             <div class="form-right">
-                <label class="text-position">Contact Number</label>
+                <label>Contact Number</label>
                 <input type="tel" name="contact" value="{{ deanContact_text }}"><br>  
 
                 <div class="password-container">
-                    <label class="text-position">Password</label>
+                    <label>Password</label>
                     <input type="password" name="password1" value="{{ deanPassword1_text }}">
                     <button type="button" class="toggle-password-btn">
                         <i class="fas fa-eye"></i>
@@ -52,7 +52,7 @@
                 </div><br>
     
                 <div class="password-container">
-                    <label class="text-position"> Confirm Password</label>
+                    <label> Confirm Password</label>
                     <input type="password" name="password2" value="{{ deanPassword2_text }}">
                     <button type="button" class="toggle-password-btn">
                         <i class="fas fa-eye"></i>
