--- a/app/templates/adminPart/adminProfile.html
+++ b/app/templates/adminPart/adminProfile.html
@@ -1,61 +1,57 @@
 {% extends "adminPart/adminBase.html" %}
 {% block title %}Admin Profile{% endblock %}
 {% block content %}
+<div class="menu-section">
+    <h2>Profile</h2>
+    <form method="post">
+        <div style="display: flex; flex-direction: row; justify-content: space-between;">
+            <div class="form-left">
+                <label>Full Name as per IC</label>
+                <input type="text" name="username" value="{{ admin_name }}" readonly><br>
+                
+                <label>Staff ID</label>
+                <input type="text" name="userid" value="{{ admin_id }}" readonly><br>
 
+                <label>Email Address</label>
+                <input type="text" name="email" value="{{ admin_email }}" readonly><br>
+            </div>
+            <br>
 
-<form method="post">
-    <h1>Profile</h1>
-    <br>
-    <div style="display: flex; flex-direction: row; justify-content: space-between;">
-        <div class="form-left">
-            <label>Full Name as per IC</label>
-            <input type="text" name="username" value="{{ admin_name }}" readonly><br>
-            
-            <label>Staff ID</label>
-            <input type="text" name="userid" value="{{ admin_id }}" readonly><br>
+            <div class="form-right">
+                <label>Contact Number</label>
+                <input type="tel" name="contact" value="{{ lecturerContact_text }}"><br>  
 
-            <label>Email Address</label>
-            <input type="text" name="email" value="{{ admin_email }}" readonly><br>
+                <div class="password-container">
+                    <label>Password</label>
+                    <input type="password" name="password1" value="{{ lecturerPassword1_text }}">
+                    <button type="button" class="toggle-password-btn">
+                        <i class="fas fa-eye"></i>
+                    </button>
+                </div><br>
+
+                <div class="password-container">
+                    <label> Confirm Password</label>
+                    <input type="password" name="password2" value="{{ lecturerPassword2_text }}">
+                    <button type="button" class="toggle-password-btn">
+                        <i class="fas fa-eye"></i>
+                    </button>
+                </div>
+            </div>
         </div>
         <br>
-
-        <div class="form-right">
-            <label>Contact Number</label>
-            <input type="tel" name="contact" value="{{ lecturerContact_text }}"><br>  
-
-            <div class="password-container">
-                <label>Password</label>
-                <input type="password" name="password1" value="{{ lecturerPassword1_text }}">
-                <button type="button" class="toggle-password-btn">
-                    <i class="fas fa-eye"></i>
-                </button>
-            </div><br>
-
-            <div class="password-container">
-                <label> Confirm Password</label>
-                <input type="password" name="password2" value="{{ lecturerPassword2_text }}">
-                <button type="button" class="toggle-password-btn">
-                    <i class="fas fa-eye"></i>
-                </button>
-            </div>
+        <br>
+        {% with messages = get_flashed_messages(with_categories=true) %}
+            {% if messages %}
+                {% for category, message in messages %}
+                <div class="alert alert-{{ category }}">
+                    <strong>{{ category.capitalize() }}:</strong> {{ message }}
+                </div>
+                {% endfor %}
+            {% endif %}
+        {% endwith %}
+        <div class="button-wrapper">
+                <button type="submit">Submit</button>
         </div>
-    </div>
-    <br>
-    <br>
-    {% with messages = get_flashed_messages(with_categories=true) %}
-        {% if messages %}
-            {% for category, message in messages %}
-            <div class="alert alert-{{ category }}">
-                <strong>{{ category.capitalize() }}:</strong> {{ message }}
-            </div>
-            {% endfor %}
-        {% endif %}
-    {% endwith %}
-    <div class="button-wrapper">
-            <button type="submit">Submit</button>
-    </div>
-</form>
-
-
-
+    </form>
+</div>
 {% endblock %}
