--- a/app/templates/adminPart/adminProfile.html
+++ b/app/templates/adminPart/adminProfile.html
@@ -4,7 +4,7 @@
 <div class="menu-section">
     <h2>Profile</h2>
     <form method="post">
-        <div style="display: flex; flex-direction: row; justify-content: space-between;">
+        <div class="profile-frame">
             <div class="form-left">
                 <label>Full Name as per IC</label>
                 <input type="text" name="username" value="{{ admin_name }}" readonly><br>
