--- a/app/static/css/admin/adminHome.css
+++ b/app/static/css/admin/adminHome.css
@@ -247,6 +247,18 @@ html, body {
     background-color: #f5f7fa;
 }
 
+.profile-frame{
+    margin: 0 auto;
+    width: 50%;
+    display: flex;
+    flex-direction: row;
+    justify-content: space-evenly;
+
+}
+
+
+
+
 
 
 
