--- a/app/templates/adminPart/adminBase.html
+++ b/app/templates/adminPart/adminBase.html
@@ -46,7 +46,7 @@
                 </a>
                 <a href="{{ url_for('admin_manageLecturer') }}" class="tab-link {% if active_tab == 'admin_managetab' %}active{% endif %}">
                     <i class="fas fa-chalkboard-teacher"></i>
-                    <span>Assign Lecturer</span>
+                    <span>Manage Lecturer</span>
                 </a>
                 <a href="{{ url_for('admin_profile') }}" class="tab-link {% if active_tab == 'admin_profiletab' %}active{% endif %}">
                     <i class="fas fa-user"></i>
