--- a/app/templates/adminPart/adminManageLecturer.html
+++ b/app/templates/adminPart/adminManageLecturer.html
@@ -5,8 +5,9 @@
 
 <!-- Row 1 First Fesatures to upload merge schedule files--> 
 <div class="menu-section">
-    <h2>Assign Lecturer</h2>
+    <h2>Manage Lecturer</h2>
     <br><br>
+    <h2>Table Record</h2>
     <div class="user-table-container">
         <table class="user-data-table">
             <thead>
