--- a/app/templates/adminPart/adminManageLecturer.html
+++ b/app/templates/adminPart/adminManageLecturer.html
@@ -6,8 +6,8 @@
 <!-- Row 1 First Fesatures to upload merge schedule files--> 
 <div class="menu-section">
     <h2>Manage Lecturer</h2>
-    <br><br>
-    <h2>Table Record</h2>
+    <br>
+    <h2>List of Lecturer, Dean, and HOP</h2>
     <div class="user-table-container">
         <table class="user-data-table">
             <thead>
@@ -19,10 +19,7 @@
                     <th>Role Based</th>
                     <th>Email</th>
                     <th>Contact</th>
-                    <th>Status</th> <!-- 
-                    If upload only -> no register, 
-                    if lecturer register self ->register, 
-                    if register data no similar with register -> wrong data-->
+                    <th>Status</th>
                 </tr>
             </thead>
             <tbody>
