--- a/app/templates/frontPart/login.html
+++ b/app/templates/frontPart/login.html
@@ -1,6 +1,6 @@
 
 <head>
-    <title>Dean Login</title>
+    <title>Login</title>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="{{ url_for('static', filename='css/frontPart.css') }}">
@@ -29,14 +29,14 @@
             <!-- Frame for Email Address container -->
             <div class="input-container">
                 <label>Email Address</label>
-                <input type="email" name="textbox" value="{{ dean_login_text }}">
+                <input type="email" name="textbox" value="{{ login_text }}">
             </div>
             <br>
         
             <!-- Frame for Enter Password container -->
             <div class="password-container">
                 <label>Password</label>
-                <input type="password" name="password" value="{{ dean_password_text }}">
+                <input type="password" name="password" value="{{ password_text }}">
                 <button type="button" class="toggle-password-btn">
                     <i class="fas fa-eye"></i>
                 </button>
@@ -58,9 +58,9 @@
             <div class="button-frame">
                 <button type="submit" name="login">Login</button>
                 <br><br>
-                <a href="{{ url_for('dean_register') }}">Register</a>
+                <a href="{{ url_for('register') }}">Register</a>
                 <br><br>
-                <a href="{{ url_for('dean_forgotPassword') }}">Forgot Password?</a>
+                <a href="{{ url_for('forgotPassword') }}">Forgot Password?</a>
             </div>
         </div>
     </form>
