--- a/app/templates/frontPart/register.html
+++ b/app/templates/frontPart/register.html
@@ -91,7 +91,7 @@
         <div class="button-frame">
             <button type="submit" name="register">Submit</button>
             <br><br>
-            <a href="{{ url_for('dean_login') }}">Back to Login</a>
+            <a href="{{ url_for('login') }}">Back to Login</a>
         </div>
 
     </form>
