--- a/app/templates/frontPart/forgotPassword.html
+++ b/app/templates/frontPart/forgotPassword.html
@@ -19,7 +19,7 @@
             <!-- Frame for Email Address container to send Email -->
             <div class="input-container">
                 <label>Email Address</label>
-                <input type="email" name="email" value="{{ dean_forgot_email_text }}">
+                <input type="email" name="email" value="{{ forgot_email_text }}">
             </div>
             <br>
 
@@ -34,7 +34,7 @@
             <div class="button-frame">
                 <button type="submit" name="forgot">Reset Password</button>
                 <br><br>
-                <a href="{{ url_for('dean_login') }}">Back</a>
+                <a href="{{ url_for('login') }}">Back</a>
             </div>
         </div>
     </form>
