--- a/app/templates/frontPart/resetPassword.html
+++ b/app/templates/frontPart/resetPassword.html
@@ -22,7 +22,7 @@
         <div class="form-container">
             <div class="password-container">
                 <label>Password</label>
-                <input type="password" name="password1" value="{{ dean_password_text_1 }}">
+                <input type="password" name="password1" value="{{ password_text_1 }}">
                 <button type="button" class="toggle-password-btn">
                     <i class="fas fa-eye"></i>
                 </button>
@@ -30,7 +30,7 @@
 
             <div class="password-container">
                 <label> Confirm Password</label>
-                <input type="password" name="password2" value="{{ dean_password_text_2 }}">
+                <input type="password" name="password2" value="{{ password_text_2 }}">
                 <button type="button" class="toggle-password-btn">
                     <i class="fas fa-eye"></i>
                 </button>
