--- a/app/templates/frontPart/forgotPassword.html
+++ b/app/templates/frontPart/forgotPassword.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <title>Dean ForgotPassword</title>
+    <title>ForgotPassword</title>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="{{ url_for('static', filename='css/frontPart.css') }}">
