--- a/app/templates/frontPart/resetPassword.html
+++ b/app/templates/frontPart/resetPassword.html
@@ -2,7 +2,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <title>Dean ResetPassword</title>
+    <title>ResetPassword</title>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="{{ url_for('static', filename='css/frontPart.css') }}">
@@ -14,10 +14,14 @@
         <div class="heading"></div>
         <br>
         <h1>Reset Your Password</h1>
-        <h4> <span class="span">Make sure both of them are similar <br>
-            Password length must be between 8-20 <br>
-            Password must include special character</span>
-        </h4><br>
+        <h4> 
+            <span class="span">
+                Make sure both of them are similar <br>
+                Password length must be between 8-20 <br>
+                Password must include special character
+            </span>
+        </h4>
+        <br>
 
         <div class="form-container">
             <div class="password-container">
@@ -36,9 +40,6 @@
                 </button>
             </div>
         
-            <!-- Javascript control the password toggle -->
-            <script src="{{ url_for('static', filename='js/function.js') }}"></script>
-
             <!-- Show any message of doesn't match the require of input -->
             {% if error_message and request.method == 'POST' %}
             <div class="alert">
@@ -50,8 +51,10 @@
             <div class="button-frame">
                 <button type="submit" name="login">Confirm</button>
             </div>
-            
         </div>
+        
+        <!-- Javascript control the password toggle -->
+        <script src="{{ url_for('static', filename='js/function.js') }}"></script>
     </form>
 </body>
 </html>
