--- a/app/templates/adminPart/adminBase.html
+++ b/app/templates/adminPart/adminBase.html
@@ -53,7 +53,7 @@
                     <span>Profile</span>
                 </a>
 
-                <a href="{{ url_for('admin_logout') }}" class="logout-btn">
+                <a href="{{ url_for('logout') }}" class="logout-btn">
                     <i class="fas fa-sign-out-alt"></i>
                     <span>Logout</span>
                 </a>
