--- a/app/templates/lecturerPart/lecturerBase.html
+++ b/app/templates/lecturerPart/lecturerBase.html
@@ -19,7 +19,7 @@
                     {{ lecturer_department }}
                 {% endif %}
             </div>
-            <a href="{{ url_for('lecturer_logout')}}" style="text-decoration: none;" class="logout-btn" type="button">Logout</a>
+            <a href="{{ url_for('logout')}}" style="text-decoration: none;" class="logout-btn" type="button">Logout</a>
         </div>
     </div>
 </head>
