--- a/app/templates/deanPart/deanBase.html
+++ b/app/templates/deanPart/deanBase.html
@@ -13,7 +13,7 @@
                 Dean of {{ dean_department }}<br>
                 {{dean_level}}
             </div>
-            <a href="{{ url_for('dean_logout')}}" style="text-decoration: none;" class="logout-btn" type="button">Logout</a>
+            <a href="{{ url_for('logout')}}" style="text-decoration: none;" class="logout-btn" type="button">Logout</a>
         </div>
     </div>
 </head>
