--- a/app/templates/lecturerPart/lecturerHomepage.html
+++ b/app/templates/lecturerPart/lecturerHomepage.html
@@ -6,7 +6,7 @@
         <!-- Row 1 First Fesatures to upload merge schedule files--> 
         <div class="menu-section">
             <!--   <h2>Upload File</h2><br>  -->
-            <a href="{{ url_for('admin_upload')}}" style="text-decoration: none;"><h2>Upload File</h2></a>
+            <a href="{{ url_for('admin_uploadLecturerTimetable')}}" style="text-decoration: none;"><h2>Upload File</h2></a>
             <li class="submenu">
                 <strong>  Purpose:</strong>
                 <ul>    
