--- a/app/templates/adminPart/adminBase.html
+++ b/app/templates/adminPart/adminBase.html
@@ -13,7 +13,7 @@
             <i class="fas fa-bars"></i>
         </div>
         <div class="user-info">
-            <!--{{ user_name }} | {{ user_id }} | {{ user_department }} -->
+            {{ user_name }} | {{ user_id }} | {{ user_department }}
         </div>
     </header>
 
