--- a/app/templates/adminPart/adminProfile.html
+++ b/app/templates/adminPart/adminProfile.html
@@ -20,7 +20,7 @@
 
             <div class="password-container">
                 <label>Password</label>
-                <input type="password" name="password1" value="{{ admin_ppassword1_text }}">
+                <input type="password" name="password1" value="{{ admin_password1_text }}">
                 <button type="button" class="toggle-password-btn">
                     <i class="fas fa-eye"></i>
                 </button>
