--- a/app/templates/lecturerPart/lecturerHomepage.html
+++ b/app/templates/lecturerPart/lecturerHomepage.html
@@ -6,7 +6,7 @@
         <!-- Row 1 First Fesatures to upload merge schedule files--> 
         <div class="menu-section">
             <!--   <h2>Upload File</h2><br>  -->
-            <a href="{{ url_for('admin_uploadLecturerTimetable')}}" style="text-decoration: none;"><h2>Upload File</h2></a>
+            <a href="{{ url_for('lecturer_timetable')}}" style="text-decoration: none;"><h2>Timetable</h2></a>
             <li class="submenu">
                 <strong>  Purpose:</strong>
                 <ul>    
@@ -19,7 +19,7 @@
         <!-- Row 2 First auto generated scdehule-->
         <div class="menu-section">
             <!-- <h2>Generate Exam Schedule</h2> -->
-            <a href="{{ url_for('admin_autoGenerate')}}" style="text-decoration: none;"><h2>Generate Exam Schedule</h2></a>
+            <a href="{{ url_for('lecturer_invigilationTimetable')}}" style="text-decoration: none;"><h2>Invigilation Timetable</h2></a>
             <li class="submenu">
                 <strong>  Functionality:</strong>
                 <ul>
@@ -34,7 +34,7 @@
         <!-- Row 2 Second on managing lecturers-->
         <div class="menu-section">
         <!-- <h2>Settings</h2> -->
-            <a href="{{ url_for('admin_manageLecturer')}}" style="text-decoration: none;"><h2>Assign Lecturer</h2></a>
+            <a href="{{ url_for('lecturer_invigilationReport')}}" style="text-decoration: none;"><h2>Invigilation Report</h2></a>
             <li class="submenu">
                 <strong>  Account Controls: </strong>
                 <ul>
