--- a/app/templates/adminPart/adminBase.html
+++ b/app/templates/adminPart/adminBase.html
@@ -49,7 +49,7 @@
                     <span>Manage Lecturer</span>
                 </a>
                 <a href="{{ url_for('admin_viewReport') }}" class="tab-link {% if active_tab == 'admin_viewReporttab' %}active{% endif %}">
-                    <i class="fas fa-book"></i>
+                    <i class="fas fa-file"></i>
                     <span>View Report</span>
                 </a>
                 <a href="{{ url_for('admin_profile') }}" class="tab-link {% if active_tab == 'admin_profiletab' %}active{% endif %}">
