--- a/app/templates/adminPart/adminProfile.html
+++ b/app/templates/adminPart/adminProfile.html
@@ -14,7 +14,10 @@
 
             <label>Email Address</label>
             <input type="text" name="email" value="{{ admin_email }}" readonly><br>
-        
+            
+            <label>Department</label>
+            <input type="text" name="department", value="{{ admin_department_text}}" readonly><br>
+    
             <label>Contact Number</label>
             <input type="tel" name="contact" value="{{ admin_contact_text }}"><br>  
 
