--- a/app/templates/deanPart/deanBase.html
+++ b/app/templates/deanPart/deanBase.html
@@ -30,7 +30,7 @@
                 </a>
                 <a href="{{ url_for('dean_invigilationReport') }}" class="tab-link {% if active_tab == 'dean_invigilationReporttab' %}active{% endif %}">
                     <i class="fas fa-users"></i>
-                    <span>Invigilation Timetable</span>
+                    <span>Invigilation Report</span>
                 </a>
                 <a href="{{ url_for('dean_profile') }}" class="tab-link {% if active_tab == 'dean_profiletab' %}active{% endif %}">
                     <i class="fas fa-user"></i>
