--- a/app/templates/adminPart/adminUploadLecturerList.html
+++ b/app/templates/adminPart/adminUploadLecturerList.html
@@ -67,8 +67,10 @@
                         {% if row.userLevel == 1 %}
                             Lecturer
                         {% elif row.userLevel == 2 %}
-                            Dean
+                            Hop
                         {% elif row.userLevel == 3 %}
+                            Dean
+                        {% elif row.userLevel == 4 %}
                             Admin
                         {% else %}
                             Unknown
