--- a/app/static/css/admin/adminHome.css
+++ b/app/static/css/admin/adminHome.css
@@ -283,8 +283,6 @@ html, body {
 
 
 form {
-    justify-content: center;
-    display: center;
     padding: 20px;
     border-radius: 10px;
     box-shadow: 0 0 10px rgba(0, 0, 0, 0.3);
@@ -306,10 +304,11 @@ label {
 }
 
 input, select {
-    width: 200%;
     padding: 10px;
     margin: 1% 0;
     box-sizing: border-box;
+    font-size: medium;
+
 }
 
 
